--- a/Nuevo/src/Presentacion/agregarPromocion.form
+++ b/Nuevo/src/Presentacion/agregarPromocion.form
@@ -178,6 +178,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Quitar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="eliminarServicioActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="txtnombrePromocion">
         </Component>
@@ -220,6 +223,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JSpinner" name="spnDescuento">
+          <Events>
+            <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="spnDescuentoStateChanged"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
           <Properties>
