--- a/Nuevo/src/Presentacion/ifrmActualizarServicio.form
+++ b/Nuevo/src/Presentacion/ifrmActualizarServicio.form
@@ -8,7 +8,7 @@
       </Border>
     </Property>
     <Property name="closable" type="boolean" value="true"/>
-    <Property name="resizable" type="boolean" value="true"/>
+    <Property name="iconifiable" type="boolean" value="true"/>
     <Property name="title" type="java.lang.String" value="Actualizar servicio"/>
     <Property name="toolTipText" type="java.lang.String" value=""/>
   </Properties>
