--- a/Nuevo/src/Presentacion/ifrmVerInfoReserva.form
+++ b/Nuevo/src/Presentacion/ifrmVerInfoReserva.form
@@ -8,6 +8,7 @@
       </Border>
     </Property>
     <Property name="closable" type="boolean" value="true"/>
+    <Property name="iconifiable" type="boolean" value="true"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
