--- a/Nuevo/src/Presentacion/nuevaCateFrame.form
+++ b/Nuevo/src/Presentacion/nuevaCateFrame.form
@@ -8,6 +8,7 @@
       </Border>
     </Property>
     <Property name="closable" type="boolean" value="true"/>
+    <Property name="iconifiable" type="boolean" value="true"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -38,6 +39,11 @@
   </Layout>
   <SubComponents>
     <Container class="javax.swing.JDesktopPane" name="treePane">
+      <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="f0" green="f0" red="f0" type="rgb"/>
+        </Property>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
