Caso de uso de ver información proveedores terminado

--- a/Nuevo/src/Presentacion/ifrmVerInfoProveedores.form
+++ b/Nuevo/src/Presentacion/ifrmVerInfoProveedores.form
@@ -189,8 +189,8 @@
                               <Group type="102" alignment="1" attributes="0">
                                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Component id="cmbServicios" min="-2" pref="329" max="-2" attributes="0"/>
-                                  <EmptySpace max="32767" attributes="0"/>
+                                  <Component id="cmbServicios" min="-2" pref="317" max="-2" attributes="0"/>
+                                  <EmptySpace type="separate" max="32767" attributes="0"/>
                                   <Component id="btnBuscarServicio" min="-2" pref="97" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
